--- a/app/src/main/res/drawable/agenda_view.xml
+++ b/app/src/main/res/drawable/agenda_view.xml
@@ -8,18 +8,18 @@
         android:pathData="M0,0h21v21h-21z"/>
     <path
         android:pathData="M7,0.875C8.45,0.875 9.625,2.05 9.625,3.5V7C9.625,8.45 8.45,9.625 7,9.625H3.5C2.05,9.625 0.875,8.45 0.875,7V3.5C0.875,2.05 2.05,0.875 3.5,0.875H7ZM7,2.625C7.483,2.625 7.875,3.017 7.875,3.5V7C7.875,7.483 7.483,7.875 7,7.875H3.5C3.017,7.875 2.625,7.483 2.625,7V3.5C2.625,3.017 3.017,2.625 3.5,2.625H7Z"
-        android:fillColor="#6338CD"
+        android:fillColor="@color/white"
         android:fillType="evenOdd"/>
     <path
         android:pathData="M7,11.375C8.45,11.375 9.625,12.55 9.625,14V17.5C9.625,18.95 8.45,20.125 7,20.125H3.5C2.05,20.125 0.875,18.95 0.875,17.5V14C0.875,12.55 2.05,11.375 3.5,11.375H7ZM7,13.125C7.483,13.125 7.875,13.517 7.875,14V17.5C7.875,17.983 7.483,18.375 7,18.375H3.5C3.017,18.375 2.625,17.983 2.625,17.5V14C2.625,13.517 3.017,13.125 3.5,13.125H7Z"
-        android:fillColor="#6338CD"
+        android:fillColor="@color/white"
         android:fillType="evenOdd"/>
     <path
         android:pathData="M17.5,11.375C18.95,11.375 20.125,12.55 20.125,14V17.5C20.125,18.95 18.95,20.125 17.5,20.125H14C12.55,20.125 11.375,18.95 11.375,17.5V14C11.375,12.55 12.55,11.375 14,11.375H17.5ZM17.5,13.125C17.983,13.125 18.375,13.517 18.375,14V17.5C18.375,17.983 17.983,18.375 17.5,18.375H14C13.517,18.375 13.125,17.983 13.125,17.5V14C13.125,13.517 13.517,13.125 14,13.125H17.5Z"
-        android:fillColor="#6338CD"
+        android:fillColor="@color/white"
         android:fillType="evenOdd"/>
     <path
         android:pathData="M15.508,3.285L13.961,8H12.715L14.828,2.313H15.621L15.508,3.285ZM16.793,8L15.242,3.285L15.117,2.313H15.918L18.043,8H16.793ZM16.723,5.883V6.801H13.719V5.883H16.723Z"
-        android:fillColor="#967ADC"/>
+        android:fillColor="@color/white"/>
   </group>
 </vector>
