--- a/app/src/main/res/layout/create_new.xml
+++ b/app/src/main/res/layout/create_new.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/textView4"
-            style="@style/CreateAccountHeading"
+            style="@style/Heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create Account"
