--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -36,21 +36,30 @@
         <item name="android:background">@drawable/field_night</item>
     </style>
 
-    <!-- Styles for Event Fragment -->
+    <!-- Styles for Event Activity -->
     <style name="EventTitle"><item name="android:textColor">@color/white</item></style>
     <style name="EventDetails"><item name="android:textColor">@color/light_grey</item></style>
     <style name="EventCard"><item name="android:background">@color/purplish_grey</item></style>
+    <style name="EventOrganiserCard"><item name="android:background">@color/purplish_grey</item></style>
+    <style name="EventLikeButton"><item name="android:background">@drawable/like_button_dark</item></style>
+    <style name="EventLocationIcon"><item name="android:src">@drawable/baseline_location_on_24_dark</item></style>
 
     <!--Styles for Create Fragment-->
     <style name="FieldHeading"><item name="android:textColor">@color/purple</item> </style>
     <style name="FieldHint"><item name="android:textColor">@color/light_grey</item> </style>
 
     <!-- Styles for Calendar Fragment -->
-    <style name="CalendarEventCard"><item name="cardBackgroundColor">@color/purplish_grey</item></style>
+    <style name="CalendarEventCard">
+        <item name="abbreviationsBarColor">@color/bg_dark</item>
+        <item name="pagesColor">@color/bg_dark</item>
+        <item name="daysLabelsColor">@color/white</item>
+    </style>
     <style name="CalendarBanner"><item name="android:background">#2B2254</item></style>
     <style name="CalendarEventDateContainer"><item name="android:background">@color/purple</item></style>
     <style name="CalendarEventMainText"><item name="android:textColor">@color/white</item></style>
     <style name="CalendarEventSubText"><item name="android:textColor">@color/light_grey</item></style>
+    <style name="CalendarEventContainer"><item name="android:background">@color/bg_dark</item></style>
+    <style name="CalendarEventLabelColor"><item name="android:background">@color/purple</item></style>
 
     <!-- Styles for Profile Fragment -->
     <style name="ProfileBanner"><item name="android:background">@color/dark_purple</item></style>
