--- a/app/src/main/res/drawable/purple_line.xml
+++ b/app/src/main/res/drawable/purple_line.xml
@@ -3,5 +3,5 @@
     android:shape="line">
     <stroke
         android:width="2dp"
-        android:color="#967ADC" /> <!-- Purple color with 50% opacity -->
+        android:color="@color/grey" /> <!-- Purple color with 50% opacity -->
 </shape>
