--- a/app/src/main/res/layout/event_page_remake.xml
+++ b/app/src/main/res/layout/event_page_remake.xml
@@ -28,9 +28,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/profile_container"
             android:backgroundTint="?attr/profile_container"
+            android:layout_marginTop="270dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/eventImageView" />
 
         <ScrollView
             android:layout_width="wrap_content"
@@ -45,6 +48,7 @@
                 android:paddingBottom="10dp">
 
                 <TextView
+                    style="@style/Heading"
                     android:id="@+id/eventNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -75,20 +79,20 @@
                     app:layout_constraintTop_toBottomOf="@+id/eventDateTimeTextView" />
 
                 <ImageView
+                    style="@style/EventLocationIcon"
                     android:id="@+id/locationPinImageView"
                     android:layout_width="22dp"
                     android:layout_height="20dp"
                     android:layout_marginTop="8dp"
-                    android:src="@drawable/baseline_location_on_24"
                     app:layout_constraintStart_toStartOf="@+id/eventDateTimeTextView"
                     app:layout_constraintTop_toBottomOf="@+id/eventDateTimeTextView" />
 
                 <ToggleButton
+                    style="@style/EventLikeButton"
                     android:id="@+id/likeToggleButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="60dp"
-                    android:background="@drawable/like_button"
                     android:textOff=""
                     android:textOn=""
                     app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +115,7 @@
                     android:layout_width="380dp"
                     android:layout_height="1dp"
                     android:layout_marginTop="96dp"
-                    android:background="#967ADC"
+                    android:background="#BDA4FC"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -169,48 +173,59 @@
                     app:layout_constraintStart_toStartOf="@+id/eventNameTextView"
                     app:layout_constraintTop_toBottomOf="@+id/event_tag_recycler" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/organiserCardView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="75dp"
-                    app:cardBackgroundColor="#EFEFF1"
-                    app:cardCornerRadius="10dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="1dp"
                     app:layout_constraintTop_toBottomOf="@+id/organiserHeaderTextView">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    <androidx.cardview.widget.CardView
+                        style="@style/EventOrganiserCard"
+                        android:id="@+id/organiserCardView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="85dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="10dp"
+                        app:cardCornerRadius="10dp"
+                        android:elevation="5dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:layout_editor_absoluteY="590dp">
 
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:id="@+id/organiserPictureImageView"
-                            android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:layout_marginStart="6dp"
-                            android:paddingStart="10dp"
-                            android:src="@drawable/baseline_account_circle_24"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:shapeAppearanceOverlay="@style/RoundedShapeAppearance" />
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-                        <TextView
-                            android:id="@+id/organiserNameTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="15dp"
-                            android:layout_marginEnd="15dp"
-                            android:text="fetching organiser's info"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toEndOf="@+id/organiserPictureImageView"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.cardview.widget.CardView>
+                            <com.google.android.material.imageview.ShapeableImageView
+                                android:id="@+id/organiserPictureImageView"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginHorizontal="10dp"
+                                android:layout_marginStart="6dp"
+                                android:src="@drawable/baseline_account_circle_24"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:shapeAppearanceOverlay="@style/RoundedShapeAppearance" />
+
+                            <TextView
+                                android:id="@+id/organiserNameTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="15dp"
+                                android:layout_marginEnd="15dp"
+                                android:text="fetching organiser's info"
+                                android:textSize="16sp"
+                                android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.0"
+                                app:layout_constraintStart_toEndOf="@+id/organiserPictureImageView"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
