--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,7 +49,7 @@
         <item name="android:background">@drawable/field_light</item>
     </style>
 
-    <!-- Styles for Event Fragment -->
+    <!-- Styles for Event Activity -->
     <style name="EventTitle">
         <item name="android:textColor">@color/black</item>
     </style>
@@ -59,8 +59,11 @@
     </style>
 
     <style name="EventCard">
-        <item name="cardBackgroundColor">@color/light_grey</item>
+        <item name="cardBackgroundColor">#EEEFF1</item>
     </style>
+    <style name="EventOrganiserCard"><item name="android:background">#EEEFF1</item></style>
+    <style name="EventLikeButton"><item name="android:background">@drawable/like_button</item></style>
+    <style name="EventLocationIcon"><item name="android:src">@drawable/baseline_location_on_24</item></style>
 
     <!--Styles for Create Fragment-->
     <style name="FieldHeading"><item name="android:textColor">@color/dark_purple</item> </style>
@@ -68,7 +71,8 @@
 
     <!-- Styles for Calendar Fragment -->
     <style name="CalendarEventCard">
-        <item name="cardBackgroundColor">@color/purple_tint</item>
+        <item name="pagesColor">@color/white</item>
+        <item name="daysLabelsColor">@color/black</item>
     </style>
 
     <style name="CalendarBanner">
@@ -84,6 +88,8 @@
     <style name="CalendarEventSubText">
         <item name="android:textColor">@color/purple</item>
     </style>
+    <style name="CalendarEventContainer"><item name="android:background">@color/white</item></style>
+    <style name="CalendarEventLabelColor"><item name="android:background">@color/dark_purple</item></style>
 
     <!-- Styles for Profile Fragment -->
     <style name="ProfileBanner"><item name="android:background">@color/purple</item></style>
