--- a/app/src/main/res/layout/event_tag_button_model.xml
+++ b/app/src/main/res/layout/event_tag_button_model.xml
@@ -7,9 +7,9 @@
     android:paddingRight="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/EventTag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/tag_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
             android:layout_marginStart="6dp"
             android:text="#"
             android:textColor="@color/grey"
-            android:textSize="10sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/category_name"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:layout_marginEnd="6dp"
             android:text="Campus_Life"
             android:textColor="@color/grey"
-            android:textSize="10sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/hashtag"
