--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -44,6 +44,7 @@
     <style name="EventLikeButton"><item name="android:background">@drawable/like_button_dark</item></style>
     <style name="EventLocationIcon"><item name="android:src">@drawable/baseline_location_on_24_dark</item></style>
     <style name="EventTag"><item name="android:background">@drawable/tag_rectangle_dark</item></style>
+    <style name="EventScreenBackground"><item name="android:background">@color/dark_grey</item></style>
 
     <!--Styles for Create Fragment-->
     <style name="FieldHeading"><item name="android:textColor">@color/purple</item> </style>
